# Forge

./: .coveragerc  .env.example  .gitignore  CLI_SHELL_MIGRATION.md  CURSOR_CLI_MIGRATION.md  LICENSE  OPENROUTER_API_ARCHITECTURE.md  ORCHESTRATOR_ROADMAP.md  README.md  ROADMAP.md  bot.py  bridge_cli.py  config.py  file_manager.py  main.py  main_codex.py  metrics.py  openrouter_catalog.py  orchestrator.py  parser.py  process_manager.py  provider_status.py  providers.py  pyproject.toml  requirements-dev.txt  requirements.txt  session_store.py  task_models.py  telegram_ui.py
bot/: __init__.py  core.py  file_registry.py  formatting.py  streaming.py  ui.py
cli/: __init__.py  app.py  command_catalog.py  prompt.py  readline_helper.py  remote_control.py  session_actions.py  shell.py  textual_app.py  thinking.py  ui.py
core/: config.py  credential_store.py  event_protocol.py  file_manager.py  openrouter_catalog.py  orchestrator.py  parser.py  process_manager.py  provider_status.py  provider_status_http.py  providers.py  rate_limiter.py  security_audit.py  session_store.py  task_models.py
docs/: architecture.md  gen_screenshots.py
runtime/: __init__.py  api_backends.py  container.py  diff_utils.py  executor.py  orchestrator_service.py  tool_executor.py
tests/: test_api_backends.py  test_bot_file_registry.py  test_bot_formatting.py  test_bridge_cli.py  test_cli_auth_smoke.py  test_cli_command_catalog.py  test_cli_model_command.py  test_cli_session_actions.py  test_cli_thinking.py  test_credential_store.py  test_event_protocol.py  test_metrics.py  test_orchestrator.py  (+14 more)
(+21 files in other folders)
