[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "forge-ai"
version = "0.2.0"
description = "Multi-provider AI CLI — Qwen · Claude · Codex in one terminal"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.79.0",
]

[project.scripts]
forge = "cli.app:textual_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "runtime*"]
